cmake_minimum_required(VERSION 3.18)
project(mywx)
set(wxWidgets_ROOT_DIR C:\\progs\\wxwidgets_install)
find_package(wxWidgets COMPONENTS gl core base OPTIONAL_COMPONENTS net)
set(SOURCES main.cpp)
add_executable(mywx ${SOURCES})
if (wxWidgets_FOUND)
include(${wxWidgets_USE_FILE})
target_link_libraries(mywx ${wxWidgets_LIBRARIES})
endif()